--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ import '../styles/global.css';
     <meta name="twitter:title" content="HappyVecinos | Gestión de comunidades eficiente y sostenible" />
     <meta name="twitter:description" content="La plataforma más avanzada para administradores de fincas, propietarios y vecinos. Eficiencia, transparencia y sostenibilidad en un solo lugar." />
     <meta name="twitter:image" content="https://happyvecinos.com/favicon.svg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <slot />
