--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,11 @@ import Newsletter from '../components/Newsletter.astro';
 ---
 <Layout>
   <header>
-    <h1>HappyVecinos</h1>
+    <div>
+      <img src="/src/assets/logo_color.svg" alt="Logo HappyVecinos" style="height: 2.8em; vertical-align: middle; margin-right: 0.5em;" />
+    <h1 style="display: inline; vertical-align: middle;">HappyVecinos</h1>
+    </div>
+    
     <nav>
       <a href="#why">¿Por qué elegirnos?</a>
       <a href="#features">Funcionalidades</a>
